@@ -1,6 +1,6 @@
 buildscript {
     ext {
-	springBootVersion = '1.5.8.RELEASE'
+	   springBootVersion = '2.0.6.RELEASE'
     }
     repositories {
 	mavenCentral()
@@ -15,7 +15,7 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'maven-publish'
 apply plugin: 'org.springframework.boot'
-
+apply plugin: 'io.spring.dependency-management'
 
 repositories {
     mavenCentral()
@@ -23,7 +23,9 @@ repositories {
 
 
 dependencies {
-    compileOnly('org.projectlombok:lombok:1.16.18')
+    compile fileTree(dir: 'libs', include: '*.jar')
+    compileOnly('org.projectlombok:lombok:1.18.2')
+    compile('javax.xml.bind:jaxb-api:2.4.0-b180725.0427')
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-data-rest')
@@ -36,16 +38,24 @@ dependencies {
 
 
 jar {
+    enabled = true
     excludes = ['**/application.yml']
 }
 
-task execJar (type: Jar, dependsOn: jar) {
+bootJar {
+    enabled = true
     classifier = 'exec'
-    from sourceSets.main.output
 }
 
-bootRepackage  {
-    withJarTask = tasks['execJar']
+bootRun {
+    // support passing -Dsystem.property=value to bootRun task
+    systemProperties = System.properties
+}
+
+tasks.withType(Test) {
+    if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
+        jvmArgs += ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
+    }
 }
 
 publishing {
