@@ -1,7 +1,6 @@
 buildscript {
     ext {
-        	springBootVersion = '1.5.8.RELEASE'
-        	springDependencyManagementVersion = '1.0.3.RELEASE'
+	   springBootVersion = '2.0.6.RELEASE'
     }
     repositories {
         maven {
@@ -10,9 +9,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-	   classpath("gradle.plugin.com.gorylenko.gradle-git-properties:gradle-git-properties:1.4.17")
-	   classpath("io.spring.gradle:dependency-management-plugin:${springDependencyManagementVersion}")
-	   classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+	    classpath("gradle.plugin.com.gorylenko.gradle-git-properties:gradle-git-properties:1.5.2")
+	    classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
 
@@ -21,13 +19,13 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'maven-publish'
 apply plugin: 'org.springframework.boot'
-apply plugin: "io.spring.dependency-management"
 apply plugin: 'com.gorylenko.gradle-git-properties'
+apply plugin: 'io.spring.dependency-management'
 
 gitProperties {
     dateFormat = "yyyy-MM-dd'T'HH:mmZ"
     dateFormatTimeZone = "UTC"
-    gitRepositoryRoot = new File("${project.rootDir}/../../../..")
+    dotGitDirectory = "${project.rootDir}/../../../.."
 }
 
 import org.apache.tools.ant.filters.*
@@ -42,13 +40,15 @@ processResources {
 
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Dalston.SR4"
-        mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:1.5.0.RELEASE"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Finchley.SR1"
+        mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:2.0.1.RELEASE"
     }
 }
 
 dependencies {
-    compileOnly('org.projectlombok:lombok:1.16.18')
+    compile fileTree(dir: 'libs', include: '*.jar')
+    compileOnly('org.projectlombok:lombok:1.18.2')
+    compile('javax.xml.bind:jaxb-api:2.4.0-b180725.0427')
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-data-rest')
@@ -57,6 +57,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('io.pivotal.spring.cloud:spring-cloud-services-starter-config-client')
     compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
+    compile('org.flywaydb:flyway-core:5.2.0')
+    compile('com.zaxxer:HikariCP:3.2.0')
     runtime('com.h2database:h2')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
@@ -69,16 +71,24 @@ repositories {
 }
 
 jar {
+    enabled = true
     excludes = ['**/application.yml']
 }
 
-task execJar (type: Jar, dependsOn: jar) {
+bootJar {
+    enabled = true
     classifier = 'exec'
-    from sourceSets.main.output
 }
 
-bootRepackage  {
-    withJarTask = tasks['execJar']
+bootRun {
+    // support passing -Dsystem.property=value to bootRun task
+    systemProperties = System.properties
+}
+
+tasks.withType(Test) {
+    if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
+        jvmArgs += ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
+    }
 }
 
 publishing {
